# marioai

./: .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt
.github/workflows/: test.yaml
competition/: 00-investigation.md  README.md  ROADMAP.md  _analyze_investigation.py  _validate_etapa2.py  _validate_monte_carlo.py  investigate.py
competition/agents/astar/: 01-teoria.md  02-modelagem.md
competition/agents/dqn/: 01-teoria.md  02-modelagem.md
competition/agents/dqn_pixels/: 01-teoria.md  (+2 more)
competition/data/: feature_stats.json  investigation.csv
docs/: 01-servidor-java.md  02-cliente-python.md  03-melhorias-cliente-python.md  04-captura-janela.md  05-treino-dqn-pixels.md
marioai/: capture.py  cli.py
marioai/agents/: __init__.py  astar_agent.py  base_agent.py  dqn_pixels_agent.py  epsilon_greedy_agent.py  exploratory_agent.py  monte_carlo_agent.py  q_learning_agent.py  random_agent.py
marioai/competition/: __init__.py  __main__.py  phases.py  runner.py  scoreboard.py
marioai/config/: __init__.py  common.py  config.py
marioai/core/: __init__.py  agent.py  environment.py  experiment.py  runner.py  sensing.py  task.py  utils.py
marioai/gym/: __init__.py  environment.py  pixel_environment.py  shaped_environment.py
tests/: conftest.py  test_agents.py  test_astar.py  test_capture.py  test_dqn_pixels_agent.py  test_epsilon_greedy.py  test_monte_carlo.py  test_pixel_environment.py  test_q_learning.py  test_sensing.py  test_task.py  test_utils.py
tests/competition/: test_phases.py  test_runner.py  test_scoreboard.py
(+23 files in other folders)
